<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2015 Google LLC.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    tools:context=".ui.HomeActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/status_bar_background"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/status_bar_back" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/grid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:elevation="1dp"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="vertical" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Widget.Plaid.HomeToolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:elevation="1dp"
            android:outlineProvider="none"
            android:title="@string/app_name" />

        <ProgressBar
            android:id="@android:id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateTint="?android:colorAccent"
            android:indeterminateTintMode="src_in" />

        <ViewStub
            android:id="@+id/stub_no_filters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/spacing_huge"
            android:layout="@layout/no_filters" />

        <ViewStub
            android:id="@+id/stub_no_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout="@layout/no_connection" />

    </FrameLayout>

    <!-- filter drawer -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filters"
        android:layout_width="@dimen/drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@color/background_dark"
        android:clipToPadding="false"
        android:elevation="@dimen/z_drawer"
        android:paddingTop="@dimen/spacing_normal"
        android:paddingBottom="@dimen/spacing_normal"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/filter_item" />

</androidx.drawerlayout.widget.DrawerLayout>
