...
    <string name="hint_reply">Reply</string>
    <string name="share">share</string>

    <!-- main screen -->
    <string name="search">Search</string>
    <string name="theme">Toggle Theme</string>
    <string name="filter">Filter</string>
    <string name="about">About</string>
    <string name="designer_news_login">Log in to Designer News</string>
    <string name="designer_news_log_out">Log out of Designer News</string>
    <string name="designer_news_logged_out">Logged out of Designer News</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
...
